# plexydesk

./: CMakeLists.txt  CNAME  CODE_OF_CONDUCT.md  ChangeLog  LICENSE  Makefile  README.md  README.windows11  config.h.cmake  configure_windows.cmake  index.html  params.json  plexydesk.Doxyfile.cmake  vcpkg.json  windows_11.md
artwork/: CMakeLists.txt
artwork/icons/: CMakeLists.txt  plexydesk.icns  wix_install_side_banner.xcf  wix_install_top_banner.xcf
artwork/packs/: CMakeLists.txt
artwork/packs/aqua/: COPYRIGHT_ICONS.txt
artwork/packs/default/: CMakeLists.txt
artwork/themepacks/bb10/: CMakeLists.txt  layout.xml
artwork/themepacks/default/: CMakeLists.txt  layout.xml
base/datastore/lib/: CMakeLists.txt  ck_data_sync.cpp  ck_data_sync.h  ck_disk_engine.cpp  ck_disk_engine.h  ck_image_io.cpp  ck_image_io.h  ck_memory_sync_engine.cpp  ck_memory_sync_engine.h  ck_sandbox.cpp  ck_sandbox.h  ck_sync_engine_interface.cpp  ck_sync_engine_interface.h  ck_sync_object.cpp  ck_sync_object.h  datastore.cpp  datastore.h  datasync.cpp  datasync.h  disksyncengine.cpp  disksyncengine.h  image_io.cpp  image_io.h  memorysyncengine.cpp  memorysyncengine.h  px_bench.h  px_bench_impl.cpp  syncengineinterface.cpp  syncengineinterface.h  syncobject.cpp  syncobject.h
base/datastore/tests/: CMakeLists.txt  datasyncruntime.cpp  datasyncruntime.h  main.cpp
base/social/data/: CMakeLists.txt  com.flickr.json.api.xml  com.flikr.api.xml  com.pixabay.json.api.xml  org.geonames.json.api.xml  org.plexydesk.api.xml
base/social/lib/: CMakeLists.txt  asyncdatadownloader.cpp  asyncdatadownloader.h  asyncimagecreator.cpp  asyncimagecreator.h  asyncimageloader.cpp  asyncimageloader.h  ck_remote_account.cpp  ck_remote_account.h  ck_remote_account_sync.cpp  ck_remote_account_sync.h  ck_remote_service.cpp  ck_remote_service.h  ck_url.cpp  ck_url.h  ck_url_request_linux.cpp  ck_url_request_linux.h  ck_url_request_mac.h  ck_url_request_mac.mm  ck_url_request_windows.cpp  ck_url_request_windows.h  ck_url_request_windows_uwp.cpp  ck_websocket_client.cpp  ck_websocket_client.h  ck_websocket_wrapper.cpp  ck_websocket_wrapper.h  servicedefinition.cpp  servicedefinition.h  variant.cpp  variant.h  webcontentinterface.cpp  webcontentinterface.h  webserver.cpp  webserver.h  webservice.cpp  webservice.h
base/social/testrunner/: AppxManifest.xml.in  CMakeLists.txt  main.cpp  socialtestrunner.cpp  socialtestrunner.h  test_url_post_request.cpp  test_url_post_request.h
base/uikit/: CMakeLists.txt  autosaver.cpp  autosaver.h  baserender.cpp  baserender.h  ck_config.cpp  ck_config.h  ck_device_window.cpp  ck_device_window.h  ck_fixed_layout.cpp  ck_fixed_layout.h  ck_resource_manager.cpp  ck_resource_manager.h  ck_session_sync.cpp  ck_session_sync.h  ck_space.cpp  ck_space.h  ck_system_window_context.cpp  ck_system_window_context.h  ck_window.cpp  ck_window.h  ck_workspace.cpp  ck_workspace.h  cookiejar.cpp  cookiejar.h  cookies.ui  cookiesexceptions.ui  extensionfactory.h  graphicsio.cpp  graphicsio.h  imagecache.cpp  imagecache.h  netwm.cpp  netwm.h  netwm_def.h  netwm_p.h  plexyconfig.cpp  plexyconfig.h  plexydeskuicore_global.h  plexyqmlglue.cpp  (+40 more)
base/uikit/components/: calendarwidget.cpp  calendarwidget.h  ck_calendar_view.cpp  ck_calendar_view.h  ck_clock_view.cpp  ck_clock_view.h  ck_dial_view.cpp  ck_dial_view.h  ck_model_view_item.cpp  ck_model_view_item.h  ck_range_view.cpp  ck_range_view.h  clockwidget.cpp  clockwidget.h  dialwidget.cpp  dialwidget.h  model_view_item.cpp  model_view_item.h  rangewidget.cpp  rangewidget.h
base/uikit/core/: CMakeLists.txt  activity_interface.h  ck_data_plugin_interface.cpp  ck_data_plugin_interface.h  ck_data_source.cpp  ck_data_source.h  ck_desktop_controller_interface.cpp  ck_desktop_controller_interface.h  ck_desktop_dialog.cpp  ck_desktop_dialog.h  ck_desktop_plugin_interface.h  ck_dialog_plugin_interface.h  ck_extension_manager.cpp  ck_extension_manager.h  ck_screen.cpp  ck_screen.h  ck_style.cpp  ck_style.h  ck_style_data.h  ck_style_interface.cpp  ck_style_interface.h  ck_timer.cpp  ck_timer.h  ck_ui_action.cpp  ck_ui_action.h  ck_widget.cpp  ck_widget.h  controller_action.cpp  controller_action.h  controllerplugininterface.h  dataplugininterface.cpp  dataplugininterface.h  datasource.cpp  datasource.h  desktop_viewport.h  desktopactivity.cpp  desktopactivity.h  extensionmanager.cpp  extensionmanager.h  plexy.h  (+9 more)
base/uikit/platform/: ck_win32_window_context.cpp  ck_win32_window_context.h
base/uikit/shaders/: glfunctions.h  qmlshadersplugin_plugin.cpp  qmlshadersplugin_plugin.h  shadereffect.cpp  shadereffect.h  shadereffectbuffer.cpp  shadereffectbuffer.h  shadereffectitem.cpp  shadereffectitem.h  shadereffectsource.cpp  shadereffectsource.h  shaders_global.h
base/uikit/widgets/: abstractcellcomponent.cpp  abstractcellcomponent.h  button.cpp  button.h  ck_DefaultTableComponent.cpp  ck_DefaultTableComponent.h  ck_DefaultTableModel.cpp  ck_DefaultTableModel.h  ck_TableView.cpp  ck_TableView.h  ck_ToolBar.cpp  ck_ToolBar.h  ck_button.cpp  ck_button.h  ck_icon_button.cpp  ck_icon_button.h  ck_image_view.cpp  ck_image_view.h  ck_item_view.cpp  ck_item_view.h  ck_label.cpp  ck_label.h  ck_line_edit.cpp  ck_line_edit.h  ck_progress_bar.cpp  ck_progress_bar.h  ck_scroll_widget.cpp  ck_scroll_widget.h  ck_scrollbar.cpp  ck_scrollbar.h  (+48 more)
extensions/activity/: CMakeLists.txt
extensions/mock_desk/: CMakeLists.txt  desktopmanager.cpp  desktopmanager.h  extrunner.h  main.cpp  main.mm  mock_desk_runtime.cpp  mock_desk_runtime.h
extensions/runtime/: CMakeLists.txt  extrunner.cpp  extrunner.h  main.cpp
runner/: CMakeLists.txt  XAtoms.h  bbmobileui.cpp  bbmobileui.h  desktopbaseui.cpp  desktopbaseui.h  desktopmanager.cpp  desktopmanager.h  icon.cpp  icon.h  iconjob.cpp  iconjob.h  iconprovider.cpp  iconprovider.h  main.cpp  main.mm  main_bb10.cpp  plexydesk-wayland.cmake.desktop  plexydesk.cmake.desktop  plexyeventhandler.cpp  plexyeventhandler.h  plexywindow.cpp  plexywindow.h
runner/apple/: CMakeLists.txt  main.mm
runner/test/: CMakeLists.txt  testicon.cpp  testicon.h
(+752 files in other folders)
